--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 
     <section class="form has-bg-image">
+        <h1 class="login-noti">Login</h1>
         <img src="images/background.svg" alt="background" class="bg-image" width="1280" height="720">
 
         <div class="container">
