--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <img src="images/lock.svg" alt="lock icon" class="input-icon" width="21" height="20">
                     <input type="text" placeholder="PASSWORD" class="input-field" id="password">
                 </div>
-                <button class="login-button" id="login-button">LOGIN</button>
+                <button type="button" class="login-button" id="login-button">LOGIN</button>
                 <a href="#" class="forgot-password">Forgot password?</a>
 
             </div>
